resources/assets/sass/v3/layout/content/package-single.scss
&.package-single,
&.package-collection {

    .main-title {
        margin-bottom:2rem;

        span {
            display:block;
        }
    }

    .main-image {
        margin-bottom:1rem;

        img {
            display: inline-block;
            height:auto;
            margin-bottom:0;
            max-width: 250px;
            width: 100%;
        }

        .label.top-left {
            position: absolute;
            top:1rem;
            left:1rem;
        }
    }

    .options-title {
        margin-top:2rem;
        margin-bottom:3rem;
    }

    @media (min-width:768px) {
        margin-bottom:2rem;

        .options-title {
            margin-top:0rem;
            margin-bottom:3rem;
        }

        img {
            max-width:300px;
            margin-bottom:0;
        }

        span {
            display: inline-block;
        }
    }

    .progress {
        position: relative;
        max-width:200px;
        margin:1rem auto 1rem;
        background-color:var(--medium-text);

        .progress-bar {
            background-color:var(--primary-color)
        }

        .detail {
            position: absolute;
            text-align: center;
            display: block;
            width:100%;
            font-size: .7rem;
            line-height: 1.3rem;
            font-weight: bold;
            color:var(--dark-text)
        }
    }
}

&.package-collection {
    .collection-option {

        .main-image {
            margin-bottom:1rem;
            text-align: center;

            img {
                display: inline-block;
                max-width:100%;
                max-height:75px;
                height:auto;
                margin-bottom:0;
            }

            .label.top-left {
                position: absolute;
                top:-1rem;
                left:0;
            }
        }

        .title {
            margin-bottom:0 !important;
        }

    }
}

